log
Fri 21 Mar 2025 02:10:18 AM UTC: 
 tests:  0|5
total_score: 0/70
3f6cb15
Fri 21 Mar 2025 02:13:04 AM UTC: 
 exercises.c | 29 +++++++++++++++--------------
 1 file changed, 15 insertions(+), 14 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:55:16: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘*’ token
   55 |   int elemento * = first(L);
      |                ^
exercises.c:55:18: error: expected expression before ‘=’ token
   55 |   int elemento * = first(L);
      |                  ^
exercises.c:56:10: error: ‘elemento’ undeclared (first use in this function)
   56 |   while (elemento != 'NULL') {
      |          ^~~~~~~~
exercises.c:56:10: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:56:22: error: multi-character character constant [-Werror=multichar]
   56 |   while (elemento != 'NULL') {
      |                      ^~~~~~
exercises.c:58:23: error: expected ‘;’ before ‘}’ token
   58 |     elemento = next(L)
      |                       ^
      |                       ;
   59 |   }
      |   ~                    
cc1: all warnings being treated as errors
Compilation failed
273ba05
Fri 21 Mar 2025 02:13:22 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:55:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘*’ token
   55 |   int elemento* = first(L);
      |               ^
exercises.c:55:17: error: expected expression before ‘=’ token
   55 |   int elemento* = first(L);
      |                 ^
exercises.c:56:10: error: ‘elemento’ undeclared (first use in this function)
   56 |   while (elemento != 'NULL') {
      |          ^~~~~~~~
exercises.c:56:10: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:56:22: error: multi-character character constant [-Werror=multichar]
   56 |   while (elemento != 'NULL') {
      |                      ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
8b9e6d9
Fri 21 Mar 2025 02:13:39 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:56:22: error: multi-character character constant [-Werror=multichar]
   56 |   while (elemento != 'NULL') {
      |                      ^~~~~~
exercises.c:56:19: error: comparison between pointer and integer [-Werror]
   56 |   while (elemento != 'NULL') {
      |                   ^~
exercises.c:57:10: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   57 |     suma += elemento;
      |          ^~
cc1: all warnings being treated as errors
Compilation failed
c6ccfc0
Fri 21 Mar 2025 02:14:11 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:55:18: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   55 |   int elemento = first(L);
      |                  ^~~~~
exercises.c:56:22: error: multi-character character constant [-Werror=multichar]
   56 |   while (elemento != 'NULL') {
      |                      ^~~~~~
exercises.c:58:14: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   58 |     elemento = next(L);
      |              ^
cc1: all warnings being treated as errors
Compilation failed
cf9080a
Fri 21 Mar 2025 02:14:36 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:55:16: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘*’ token
   55 |   void elemento* = first(L);
      |                ^
exercises.c:55:18: error: expected expression before ‘=’ token
   55 |   void elemento* = first(L);
      |                  ^
exercises.c:56:10: error: ‘elemento’ undeclared (first use in this function)
   56 |   while (elemento != 'NULL') {
      |          ^~~~~~~~
exercises.c:56:10: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:56:22: error: multi-character character constant [-Werror=multichar]
   56 |   while (elemento != 'NULL') {
      |                      ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
89ff92b
Fri 21 Mar 2025 02:14:54 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:56:22: error: multi-character character constant [-Werror=multichar]
   56 |   while (elemento != 'NULL') {
      |                      ^~~~~~
exercises.c:56:19: error: comparison between pointer and integer [-Werror]
   56 |   while (elemento != 'NULL') {
      |                   ^~
exercises.c:57:10: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   57 |     suma += elemento;
      |          ^~
cc1: all warnings being treated as errors
Compilation failed
590a09f
Fri 21 Mar 2025 02:15:58 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:56:22: error: multi-character character constant [-Werror=multichar]
   56 |   while (elemento != 'NULL') {
      |                      ^~~~~~
exercises.c:56:19: error: comparison between pointer and integer [-Werror]
   56 |   while (elemento != 'NULL') {
      |                   ^~
exercises.c:57:10: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   57 |     suma = suma + elemento;
      |          ^
cc1: all warnings being treated as errors
Compilation failed
9e8a9ea
Fri 21 Mar 2025 02:16:52 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:56:22: error: multi-character character constant [-Werror=multichar]
   56 |   while (elemento != 'NULL') {
      |                      ^~~~~~
exercises.c:56:19: error: comparison between pointer and integer [-Werror]
   56 |   while (elemento != 'NULL') {
      |                   ^~
exercises.c:57:19: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   57 |     suma = suma + (int)elemento;
      |                   ^
cc1: all warnings being treated as errors
Compilation failed
eecd3e5
Fri 21 Mar 2025 02:17:39 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:57:10: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   57 |     suma = suma + elemento;
      |          ^
cc1: all warnings being treated as errors
Compilation failed
2dc615c
Fri 21 Mar 2025 02:18:25 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:57:10: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   57 |     suma = suma + (int *)elemento;
      |          ^
cc1: all warnings being treated as errors
Compilation failed
17d5c22
Fri 21 Mar 2025 02:20:01 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:57:10: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   57 |     suma = suma + elemento;
      |          ^
cc1: all warnings being treated as errors
Compilation failed
4bd4d3b
Fri 21 Mar 2025 02:20:42 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
115d523
Sat 22 Mar 2025 10:37:31 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|4
total_score: 10/70
37c6694
Sat 22 Mar 2025 10:43:06 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:80:3: error: this ‘while’ clause does not guard... [-Werror=misleading-indentation]
   80 |   while (elemento != NULL)
      |   ^~~~~
exercises.c:83:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘while’
   83 |     elemento = next(L);
      |     ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
96c3bbd
Sat 22 Mar 2025 10:43:24 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 30/70
9b7f45f
Sat 22 Mar 2025 10:49:45 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 30/70
8d5910d
Sat 22 Mar 2025 10:53:03 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 30/70
75ff65c
